--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-﻿asgiref==3.11.0
+﻿﻿asgiref==3.11.0
 Django==5.0
 sqlparse==0.5.3
 tzdata==2025.2
-Pillow==12.0.0
+Pillow==12
 djangorestframework
-pygments
+pygmentsts
